NEXT
    Bug Fixes
    * Correct parse error on multi-line default values
      [github #106]

20140806.0226_001	Wed Aug  6 02:26:36 PDT 2014
    Bug Fixes
    * Correct parse error when invocant is preceded by a space
    * Fix bug where undef which should trigger default fails typecheck
      [github #102]

    Distribution Fixes
    * Remove dependency on experimental (breaks 5.8 compat)
      [github #97]

    Misc
    * Refactor signature parsing into its own class
      [github #96]

20140224    Mon Feb 24 14:25:43 PST 2014
    Promoted to full release

20140220.0106_001   Thu Feb 20 01:14:54 PST 2014
    Distribution Fixes
    * Remove dependency on Devel::Pragma
      [github #91], and fixes [github #41]

    Docs
    * Document which features require Data::Alias and Const::Fast
      [github #90]

20131010    Thu Oct 10 00:57:41 PDT 2013
    Promoted to full release

20131007.0002_002   Mon Oct  7 00:02:30 PDT 2013
    Distribution Fixes
    * Fixed failing test in 5.10.0
      (uncovered by CPAN Testers)

20131004.0159_001   Fri Oct  4 01:59:55 PDT 2013
    Bug Fixes
    * Removed experimental smartmatch warnings
    * Don't require Data::Alias for named params unless you have to
      [github #71]

    Docs
    * Updated close parend problem to include quotes and a workaround
      [rt.cpan.org 85925]
    * Fixed some typos (thanks dsteinbrunner)
      [github #88]

    Distribution Fixes
    * Fixed repo link in metadata (thanks dsteinbrunner)
      [github #87]

20130505    May  5 21:17:45 PDT 2013
    Promoted to full release

20130427.0031_001   Sat Apr 27 00:31:04 PDT 2013
    Distribution Fixes
    * Add M::S::Parameter to MANIFEST
      [github #76]
    * Change representation of Infinity to work on Win32
      [github #75]

    Bug Fixes
    * Fixed obscure bug where an eval in Method::Signatures wouldn't be
      skipped when carp'ing (i.e. in carp_location_for())
      [github #72]

    Misc
    * Rearranged so signature is now an object